[gd_scene load_steps=10 format=3 uid="uid://cbxbyhurm2iyi"]

[ext_resource type="Script" path="res://Scenes/Debug/TestSwordDisplay/sword.gd" id="1_4l2dh"]
[ext_resource type="Script" path="res://Scenes/Debug/TestSwordDisplay/testing_sword_scene.gd" id="1_7haqc"]
[ext_resource type="Texture2D" uid="uid://cjvmiou7ovqtj" path="res://Assets/Swords/Handle/Handle_1.png" id="2_81c60"]
[ext_resource type="Texture2D" uid="uid://b50dlmu8s5ljb" path="res://Assets/Swords/Blade/Blade_2.png" id="3_rxans"]
[ext_resource type="Texture2D" uid="uid://c1pm74dljlkd1" path="res://Assets/Swords/Guard/Guard_1.png" id="4_d0yf2"]
[ext_resource type="Texture2D" uid="uid://ddbr2rej0orwv" path="res://Assets/Swords/Pommel/Pommel_2.png" id="5_xw6fa"]
[ext_resource type="Texture2D" uid="uid://1ynewuuhtq8" path="res://Assets/Swords/Blade/Blade_1.png" id="6_i02er"]
[ext_resource type="Texture2D" uid="uid://cxcdaqtum2e4t" path="res://Assets/Swords/Guard/Guard_2.png" id="7_pcfin"]
[ext_resource type="Texture2D" uid="uid://dhg6qklbs7psk" path="res://Assets/Swords/Pommel/Pommel_1.png" id="8_r5fkg"]

[node name="Testing_Sword_Scene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7haqc")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.509398, 0.437294, 0.408885, 1)

[node name="Sword" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4l2dh")

[node name="Handle_Texture" type="TextureRect" parent="Sword"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -128.0
offset_right = 64.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_81c60")
expand_mode = 1

[node name="Blade_Texture" type="TextureRect" parent="Sword"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -128.0
offset_right = 64.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_rxans")
expand_mode = 1

[node name="Guard_Texture" type="TextureRect" parent="Sword"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -128.0
offset_right = 64.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_d0yf2")
expand_mode = 1

[node name="Pommel_Texture" type="TextureRect" parent="Sword"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -128.0
offset_right = 64.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_xw6fa")
expand_mode = 1

[node name="Sword2" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -218.0
offset_bottom = -218.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4l2dh")

[node name="Handle_Texture" type="TextureRect" parent="Sword2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -128.0
offset_right = 64.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_81c60")
expand_mode = 1

[node name="Blade_Texture" type="TextureRect" parent="Sword2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -128.0
offset_right = 64.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_i02er")
expand_mode = 1

[node name="Guard_Texture" type="TextureRect" parent="Sword2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -128.0
offset_right = 64.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_pcfin")
expand_mode = 1

[node name="Pommel_Texture" type="TextureRect" parent="Sword2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -128.0
offset_right = 64.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_r5fkg")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -176.0
offset_top = -112.0
offset_right = 176.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="RandomiseButton" type="Button" parent="MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 80)
layout_mode = 2
focus_mode = 0
text = "Randomise"
